[gd_scene load_steps=15 format=3 uid="uid://dphxqg6iudgvm"]

[ext_resource type="Script" uid="uid://bu260e1fhhyax" path="res://scripts/main_menu.gd" id="1_oa1go"]
[ext_resource type="Texture2D" uid="uid://8hu8yqpkxn2t" path="res://assets/background/menu_background.png" id="2_tbmy8"]
[ext_resource type="FontFile" uid="uid://c4pe7v7qaoxgf" path="res://assets/fonts/Comfortaa-Bold.ttf" id="3_jk1qb"]
[ext_resource type="AudioStream" uid="uid://ck2ia5w6f8atu" path="res://assets/musics/menu_music.mp3" id="4_5dd4i"]
[ext_resource type="Script" uid="uid://jnrk70xdn47a" path="res://scripts/audio_control.gd" id="5_lgwnu"]
[ext_resource type="Script" uid="uid://bq1wsj1562bfb" path="res://scripts/fullscreen_control.gd" id="6_flqon"]
[ext_resource type="PackedScene" uid="uid://ne1mtcf1gjyd" path="res://scenes/scene_transition_animation.tscn" id="7_rcqid"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fu7sn"]
texture = ExtResource("2_tbmy8")
modulate_color = Color(0.544974, 0.544974, 0.544974, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7vrkn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu7sn"]
bg_color = Color(0.687215, 0.687215, 0.687215, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jix8l"]
bg_color = Color(0.509286, 0.509286, 0.509286, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7vrkn"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_jix8l"]
color = Color(1, 1, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_glbon"]
color = Color(0.0622741, 0.300104, 1, 1)
thickness = 6

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oa1go")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_fu7sn")

[node name="Main_buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -197.0
offset_top = -47.0
offset_right = 197.0
offset_bottom = 234.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Start_game" type="Button" parent="Main_buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_jk1qb")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/normal = SubResource("StyleBoxFlat_7vrkn")
text = "Commencer"

[node name="Options" type="Button" parent="Main_buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_jk1qb")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/normal = SubResource("StyleBoxFlat_7vrkn")
text = "Options
"

[node name="Exit" type="Button" parent="Main_buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_jk1qb")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/normal = SubResource("StyleBoxFlat_7vrkn")
text = "Quitter
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -259.5
offset_top = -287.0
offset_right = 259.5
offset_bottom = -101.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 10
theme_override_fonts/font = ExtResource("3_jk1qb")
theme_override_font_sizes/font_size = 120
text = "Polutor"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_5dd4i")
autoplay = true
bus = &"Music"

[node name="Options_panel" type="Panel" parent="."]
visible = false
top_level = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -273.0
offset_top = -131.0
offset_right = 294.0
offset_bottom = 297.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Options_panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 92.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_jk1qb")
theme_override_font_sizes/font_size = 40
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="Options_panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = 125.0
offset_right = 61.0
offset_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_jk1qb")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_7vrkn")
theme_override_styles/hover = SubResource("StyleBoxFlat_fu7sn")
theme_override_styles/pressed = SubResource("StyleBoxFlat_jix8l")
theme_override_styles/normal = SubResource("StyleBoxFlat_7vrkn")
text = "Retour"

[node name="Audio_control_music" type="HSlider" parent="Options_panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.0
offset_top = -129.0
offset_right = 189.0
offset_bottom = -41.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxLine_jix8l")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_glbon")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_glbon")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("5_lgwnu")
audio_bus_name = "Music"

[node name="Label" type="Label" parent="Options_panel/Audio_control_music"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("3_jk1qb")
theme_override_font_sizes/font_size = 20
text = "Music"

[node name="Audio_control_sfx" type="HSlider" parent="Options_panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -189.0
offset_top = -58.0
offset_right = 189.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/slider = SubResource("StyleBoxLine_jix8l")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_glbon")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_glbon")
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("5_lgwnu")
audio_bus_name = "SFX"

[node name="Label" type="Label" parent="Options_panel/Audio_control_sfx"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("3_jk1qb")
theme_override_font_sizes/font_size = 20
text = "SFX"

[node name="Fullscreen_control" type="CheckButton" parent="Options_panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.5
offset_top = 3.0
offset_right = 188.5
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_jk1qb")
theme_override_font_sizes/font_size = 20
text = "Pleine Ã©cran"
script = ExtResource("6_flqon")

[node name="Scene_transition_animation" parent="." instance=ExtResource("7_rcqid")]

[connection signal="pressed" from="Main_buttons/Start_game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Main_buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Main_buttons/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Options_panel/Back" to="." method="_on_back_options_pressed"]
[connection signal="value_changed" from="Options_panel/Audio_control_music" to="Options_panel/Audio_control_music" method="_on_value_changed"]
[connection signal="value_changed" from="Options_panel/Audio_control_sfx" to="Options_panel/Audio_control_sfx" method="_on_value_changed"]
[connection signal="toggled" from="Options_panel/Fullscreen_control" to="Options_panel/Fullscreen_control" method="_on_toggled"]
